--- a/index.css
+++ b/index.css
@@ -1,13 +1,14 @@
 body {
-    background-color: lightblue;
+    background-color: white;
     color: black;
 }
 
 h1 {
-    color: white;
+    color: black;
     text-align: center;
 }
 
-a:link {
-    color: black;
+a:link, a:visited {
+    color: #61dafb;
+    text-align: center;
 }
