--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 body {
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
 }
 
 h1 {
-    color: black;
+    color: white;
     text-align: center;
 }
 
