--- a/index.css
+++ b/index.css
@@ -8,6 +8,11 @@ h1 {
     text-align: center;
 }
 
+p {
+    text-align: center;
+    color: white;
+}
+
 a:link, a:visited {
     color: #61dafb;
     text-align: center;
